# Spartan

./: .gitignore  README.md  build.gradle.kts  requirements.txt  settings.gradle.kts
.github/workflows/: build-integration.yml  build-native.yml  javadoc.yml
api/: build.gradle.kts
api/src/main/java/org/spartan/api/: SpartanApi.java
api/src/main/java/org/spartan/api/agent/: Spartan.java  SpartanAgent.java  SpartanCompressor.java  SpartanModel.java
api/src/main/java/org/spartan/api/engine/: SpartanAgent.java  SpartanCompressor.java  SpartanModel.java  SpartanMultiAgentModel.java  SpartanTickOrchestrator.java
api/src/main/java/org/spartan/api/exception/: SpartanNativeException.java  SpartanPersistenceException.java
api/src/main/java/org/spartan/api/spi/: SpartanApiProvider.java  SpartanCoreRegistry.java
core/: CMakeLists.txt
core/src/org/spartan/api/: SpartanApi.cpp
core/src/org/spartan/core/: SpartanApi.cpp  SpartanCore.cpp  SpartanCore.h  SpartanCore.hpp  main.cpp
core/src/org/spartan/core/logging/: SpartanLogger.cpp  SpartanLogger.h
core/src/org/spartan/core/machinelearning/: ModelHyperparameterConfig.h
core/src/org/spartan/core/machinelearning/critic/: SpartanAbstractCritic.cpp  SpartanAbstractCritic.h
core/src/org/spartan/core/machinelearning/model/: SpartanBaseModel.cpp  SpartanBaseModel.h
core/src/org/spartan/core/machinelearning/registry/: SpartanModelRegistry.cpp  SpartanModelRegistry.h
core/src/org/spartan/core/math/fuzzy/: SpartanFuzzyMath.cpp  SpartanFuzzyMath.h
core/src/org/spartan/core/math/metric/: SpartanMetrics.cpp  SpartanMetrics.h
core/src/org/spartan/core/math/reinforcement/: SpartanReinforcement.cpp  SpartanReinforcement.h
core/src/org/spartan/core/memory/: ArrayCleaners.cpp  ArrayCleaners.h
core/src/org/spartan/internal/: SpartanEngine.cpp  SpartanEngine.h
core/src/org/spartan/internal/logging/: SpartanLogger.cpp  SpartanLogger.h
core/src/org/spartan/internal/machinelearning/: ModelHyperparameterConfig.h
core/src/org/spartan/internal/machinelearning/critic/: SpartanAbstractCritic.cpp  SpartanAbstractCritic.h
core/src/org/spartan/internal/machinelearning/model/: AutoEncoderCompressorSpartanModel.cpp  AutoEncoderCompressorSpartanModel.h  CuriosityDrivenRecurrentSoftActorCriticSpartanModel.cpp  CuriosityDrivenRecurrentSoftActorCriticSpartanModel.h  DefaultSpartanAgent.h  DoubleDeepQNetworkSpartanModel.cpp  DoubleDeepQNetworkSpartanModel.h  ProximalPolicyOptimizationSpartanModel.cpp  ProximalPolicyOptimizationSpartanModel.h  RecurrentSoftActorCriticSpartanModel.cpp  RecurrentSoftActorCriticSpartanModel.h  SpartanAgent.h  SpartanBaseModel.cpp  SpartanBaseModel.h  SpartanCompressor.h  SpartanCritic.h  SpartanModel.cpp  SpartanModel.h  SpartanMultiAgentGroup.cpp  SpartanMultiAgentGroup.h
core/src/org/spartan/internal/machinelearning/network/: ContinuousQNetwork.h  GatedRecurrentUnitLayer.h  GaussianPolicyNetwork.h  NestedAutoEncoderUnit.h  ProximalPolicyOptimizationActorNetwork.h  ProximalPolicyOptimizationCriticNetwork.h  SpartanAbstractCritic.h
core/src/org/spartan/internal/machinelearning/persistence/: AutoEncoderPersistenceModule.cpp  AutoEncoderPersistenceModule.h  CuriosityRsacPersistenceModule.cpp  CuriosityRsacPersistenceModule.h  DdqnPersistenceModule.cpp  DdqnPersistenceModule.h  ModelPersistenceModule.cpp  ModelPersistenceModule.h  PersistenceCommonUtils.cpp  PersistenceCommonUtils.h  PersistenceModuleRegistration.cpp  PersistenceModuleRegistration.h  ProximalPolicyOptimizationPersistenceModule.cpp  ProximalPolicyOptimizationPersistenceModule.h  RsacPersistenceModule.cpp  RsacPersistenceModule.h  SpartanPersistence.cpp  SpartanPersistence.h
core/src/org/spartan/internal/machinelearning/registry/: SpartanModelRegistry.cpp  SpartanModelRegistry.h  SpartanSlotMap.h
core/src/org/spartan/internal/machinelearning/replay/: ExperienceReplayBuffer.h
core/src/org/spartan/internal/machinelearning/trace/: GeneralizedAdvantageBuffer.h  RemorseTraceBuffer.cpp  RemorseTraceBuffer.h
core/src/org/spartan/internal/math/fuzzy/: SpartanFuzzyMath.cpp  SpartanFuzzyMath.h
core/src/org/spartan/internal/math/metric/: SpartanMetrics.cpp  SpartanMetrics.h
core/src/org/spartan/internal/math/reinforcement/: SpartanReinforcement.cpp  SpartanReinforcement.h
core/src/org/spartan/internal/math/tensor/: SpartanTensorMath.cpp  SpartanTensorMath.h
core/src/org/spartan/internal/memory/: ArrayCleaners.cpp  ArrayCleaners.h
core/src/org/spartan/internal/simd/: SpartanSimd.h  SpartanSimdDetector.cpp  SpartanSimdDetector.h  SpartanSimdDispatcher.cpp  SpartanSimdDispatcher.h  SpartanSimdImplAVX2.cpp  SpartanSimdImplAVX512.cpp  SpartanSimdImplNEON.cpp  SpartanSimdImplScalar.cpp  SpartanSimdOps.cpp  SpartanSimdOps.h
internal/: build.gradle.kts
internal/src/main/java/org/spartan/internal/: SpartanApiImpl.java
internal/src/main/java/org/spartan/internal/agent/: SpartanModelImpl.java
internal/src/main/java/org/spartan/internal/bridge/: SpartanNative.java
internal/src/main/java/org/spartan/internal/config/: AutoEncoderCompressorConfigImpl.java  CuriosityDrivenRecurrentSoftActorCriticConfigImpl.java  DoubleDeepQNetworkConfigImpl.java  RecurrentSoftActorCriticConfigImpl.java
internal/src/main/java/org/spartan/internal/engine/: SpartanModelImpl.java  SpartanMultiAgentModelImpl.java  SpartanTickOrchestratorImpl.java
internal/src/main/java/org/spartan/internal/facade/: SpartanApiImpl.java
internal/src/main/java/org/spartan/internal/model/: AbstractSpartanModel.java  AutoEncoderCompressorModel.java  AutoEncoderCompressorModelImpl.java  CuriosityDrivenRecurrentSoftActorCriticModelImpl.java  DoubleDeepQNetworkModel.java  (+5 more)
internal/src/main/resources/: plugin.yml
scripts/: generate_ffm_spartan_bridge.py
scripts/ffm_bridge/: __init__.py  config.py  emitters.py  generator.py  parser.py  templates.py  types.py
src/main/kotlin/dev/alepando/spartan/: Spartan.kt
src/main/kotlin/dev/alepando/spartan/database/: MySQLManager.kt
src/main/kotlin/dev/alepando/spartan/util/: Extensions.kt
src/main/resources/: config.yml  plugin.yml
(+119 files in other folders)
